--- a/Business Website/style.css
+++ b/Business Website/style.css
@@ -1,9 +1,4 @@
 :root {
-
-  /**
-   * colors
-   */
-
   --united-nations-blue: hsl(160, 14%, 4%);
   --bright-navy-blue: rgb(55, 129, 193);
   --spanish-gray: hsl(240, 0%, 39%);
@@ -18,10 +13,6 @@
   --black: hsl(0, 0%, 0%);
   --onyx: hsl(0, 0%, 25%);
   --jet: hsl(0, 0%, 20%);
-
-  /**
-   * typography
-   */
 
   --ff-poppins: "Poppins", sans-serif;
   --ff-montserrat: "Montserrat", sans-serif;
@@ -40,34 +31,15 @@
   --fw-700: 700;
   --fw-800: 800;
 
-  /**
-   * transition
-   */
+ --transition: 0.25s ease-in-out;
 
-  --transition: 0.25s ease-in-out;
-
-  /**
-   * spacing
-   */
-
-  --section-padding: 60px;
-
-  /**
-   * border-radius
-   */
+--section-padding: 60px;
 
   --radius-15: 15px;
   --radius-25: 25px;
-
 }
 
 
-
-
-
-/*-----------------------------------*\
- * #RESET
-\*-----------------------------------*/
 
 *, *::before, *::after {
   margin: 0;
@@ -107,13 +79,6 @@ html {
 
 body { background: var(--white); }
 
-
-
-
-
-/*-----------------------------------*\
- * #REUSED STYLE
-\*-----------------------------------*/
 
 .container { padding-inline: 15px; }
 
@@ -183,14 +148,6 @@ body { background: var(--white); }
   color: var(--black-coral);
   font-size: var(--fs-5);
 }
-
-
-
-
-
-/*-----------------------------------*\
- * #HEADER
-\*-----------------------------------*/
 
 .header {
   position: absolute;
@@ -348,14 +305,6 @@ body { background: var(--white); }
   pointer-events: all;
 }
 
-
-
-
-
-/*-----------------------------------*\
- * #HERO
-\*-----------------------------------*/
-
 .hero {
   background-image: url("Images/hero-banner\ 1.jpg");
   background-repeat: no-repeat;
@@ -385,14 +334,6 @@ body { background: var(--white); }
   align-items: center;
   gap: 10px;
 }
-
-
-
-
-
-/*-----------------------------------*\
- * #TOUR SEARCH
-\*-----------------------------------*/
 
 .tour-search {
   background: var(--bright-navy-blue);
@@ -428,14 +369,6 @@ body { background: var(--white); }
   font-weight: var(--fw-600);
   margin-top: 35px;
 }
-
-
-
-
-
-/*-----------------------------------*\
- * #POPULAR
-\*-----------------------------------*/
 
 .popular { padding-block: var(--section-padding); }
 .popular{
@@ -482,13 +415,6 @@ body { background: var(--white); }
 
 .popular .btn { margin-inline: auto; }
 
-
-
-
-
-/*-----------------------------------*\
- * #PACKAGE
-\*-----------------------------------*/
 .package{
   background: rgb(214, 224, 231);
 }
@@ -601,19 +527,10 @@ body { background: var(--white); }
 }
 
 .package .btn { margin-inline: auto; }
-
-
-
-
-
-/*-----------------------------------*\
- * #GALLERY
-\*-----------------------------------*/
-
 .gallery { padding-block: var(--section-padding); }
 
 .gallery{
-  background-color:snow
+  background-color:snow;
 }
 .gallery-list {
   display: grid;
@@ -636,14 +553,6 @@ body { background: var(--white); }
   object-fit: cover;
 }
 
-
-
-
-
-/*-----------------------------------*\
- * #CTA
-\*-----------------------------------*/
-
 .cta {
   background: #84898dc2;
   padding-block: var(--section-padding);
@@ -652,14 +561,6 @@ body { background: var(--white); }
 .cta :is(.section-subtitle, .section-title, .section-text) { color: var(--white); }
 
 .cta .section-text { font-size: var(--fs-5); }
-
-
-
-
-
-/*-----------------------------------*\
- * #FOOTER
-\*-----------------------------------*/
 
 .footer-top {
   background: var(--gunmetal);
@@ -784,14 +685,6 @@ address {
 
 .footer-bottom-link:is(:hover, :focus) { color: var(--white); }
 
-
-
-
-
-/*-----------------------------------*\
- * #GO TO TOP
-\*-----------------------------------*/
-
 .go-top {
   position: fixed;
   bottom: 15px;
@@ -820,17 +713,6 @@ address {
 .go-top:is(:hover, :focus) { opacity: 1; }
 
 
-
-
-
-/*-----------------------------------*\
- * #MEDIA QUERIES
-\*-----------------------------------*/
-
-/**
- * responsive for larger than 580px screen
- */
-
 @media (min-width: 580px) {
 
   /**
@@ -856,11 +738,6 @@ address {
   .card-text { --fs-5: 15px; }
 
 
-
-  /**
-   * HEADER
-   */
-
   .header { padding-top: 83px; }
 
   .helpline-box .icon-box { padding: 14px; }
@@ -877,11 +754,6 @@ address {
   }
 
 
-
-  /**
-   * HERO
-   */
-
   .hero {
     min-height: 800px;
     padding-top: 85px;
@@ -891,11 +763,6 @@ address {
 
   .btn-group { gap: 20px; }
 
-
-
-  /**
-   * TOUR SEARCH
-   */
 
   .tour-search-form {
     display: grid;
@@ -914,18 +781,8 @@ address {
   }
 
 
-
-  /**
-   * POPULAR
-   */
-
   .popular-card .card-content { right: auto; }
 
-
-
-  /**
-   * FOOTER
-   */
 
   .footer .container {
     display: grid;
@@ -946,22 +803,11 @@ address {
 
 
 
-
-/**
- * responsive for larger than 768px screen
- */
-
 @media (min-width: 768px) {
 
-  /**
-   * CUSTOM PROPERTY
-   */
 
   :root {
 
-    /**
-     * typography
-     */
 
     --fs-5: 15px;
 
@@ -969,22 +815,12 @@ address {
 
 
 
-  /**
-   * REUSED STYLE
-   */
-
   .container { max-width: 800px; }
 
   .section-text {
     max-width: 60ch;
     margin-inline: auto;
   }
-
-
-
-  /**
-   * HEADER
-   */
 
   .helpline-box {
     display: flex;
@@ -1001,12 +837,6 @@ address {
 
   .social-list { gap: 10px; }
 
-
-
-  /**
-   * POPULAR
-   */
-
   .popular-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1017,12 +847,6 @@ address {
   .popular-list > li:not(:last-child) { margin-bottom: 0; }
 
   .popular-card .card-content { right: 20px; }
-
-
-
-  /**
-   * PACKAGE
-   */
 
   .package-list { margin-bottom: 50px; }
 
@@ -1043,13 +867,7 @@ address {
   }
 
   .package-card .card-price .wrapper { margin-bottom: 15px; }
-
-
-
-  /**
-   * GALLERY
-   */
-
+  
   .gallery { padding-bottom: calc(var(--section-padding * 2)); }
 
   .gallery-list {
@@ -1060,11 +878,6 @@ address {
   .gallery-image { border-radius: var(--radius-25); }
 
 
-
-  /**
-   * CTA
-   */
-
   .cta .container {
     display: flex;
     justify-content: space-between;
@@ -1074,12 +887,6 @@ address {
   .cta-content { width: calc(100% - 225px); }
 
   .cta .section-text { margin-inline: 0; }
-
-
-
-  /**
-   * FOOTER
-   */
 
   .form-wrapper {
     display: flex;
@@ -1095,26 +902,10 @@ address {
 }
 
 
-
-
-
-/**
- * responsive for larger than 992px screen
- */
-
 @media (min-width: 992px) {
-
-  /**
-   * REUSED STYLE
-   */
 
   .container { max-width: 1050px; }
 
-
-
-  /**
-   * HEADER
-   */
 
   .header.active .header-top {
     position: unset;
@@ -1170,18 +961,8 @@ address {
   .overlay { display: none; }
 
 
-
-  /**
-   * HERO
-   */
-
   .hero .container { max-width: 740px; }
 
-
-
-  /**
-   * TOUR SEARCH
-   */
 
   .tour-search-form { grid-template-columns: repeat(5, 1fr); }
 
@@ -1192,36 +973,17 @@ address {
   }
 
 
-
-  /**
-   * POPULAR
-   */
-
   .popular-list { grid-template-columns: repeat(3, 1fr); }
 
 
-
-  /**
-   * PACKAGE
-   */
 
   .meta-box { --fs-8: 13px; }
 
   .meta-box > ion-icon { font-size: 15px; }
 
 
-
-  /**
-   * CTA 
-   */
-
   .cta .section-title { max-width: 25ch; }
 
-
-
-  /**
-   * FOOTER
-   */
 
   .footer-top .container {
     grid-template-columns: repeat(3, 1fr);
@@ -1237,34 +999,15 @@ address {
 }
 
 
-
-
-
-/**
- * responsive for larger than 1200px screen
- */
-
 @media (min-width: 1200px) {
 
-  /**
-   * CUSTOM PROPERTY
-   */
 
   :root {
-
-    /**
-     * spacing
-     */
 
     --section-padding: 100px;
 
   }
 
-
-
-  /**
-   * REUSED STYLE
-   */
 
   .container { max-width: 1180px; }
 
